# FermiHalos

./: .gitignore  CITATION.bib  HISTORY.txt  MANIFEST.in  README.md  cutoff_energy_conditon.py  klein_condition.py  pyproject.toml  rar_solver.py  setup.py  testing.py  tolman_condition.py
.github/workflows/: docs.yml
Applications/: dispersion_velocity_optimization.py
Data/: test.txt
docs/source/: conf.py  contributing.rst  example_of_use.rst  index.rst  installation.rst  intro.rst  license.rst  quick_start.rst  rar_class.rst  references.rst
fermihalos/: __init__.py  model.py  rar_class.py
rarmodel/: rar_class.py
src/: model.py  rar_class.py  rar_solver.py  test_instance.py
tests/: cutoff_energy_conditon.py  density_plots.py  klein_condition.py  plots.py  profile_output.txt  profile_output_numba.txt  tetramomentum_conservation.py  tolman_condition.py
